# qeeg-neurofeedback-opensoftware

./: CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
cmake/: cmake_uninstall.cmake.in  qeeg.pc.in  qeegConfig.cmake.in  test_bandratios_input_resolution.cmake  test_cmake_package_consume.cmake  test_offline_app_pipeline_auto_toolbox.cmake  test_offline_app_shims.cmake  test_offline_app_shims_dryrun.cmake  test_pipeline_basic.cmake  test_recording_input_resolution.cmake  version_config.hpp.in
completions/: _qeeg_nf_cli  _qeeg_offline_app_cli  _qeeg_version_cli  qeeg_nf_cli.bash  qeeg_nf_cli.fish  qeeg_offline_app_cli.bash  qeeg_offline_app_cli.fish  qeeg_version_cli.bash  qeeg_version_cli.fish
examples/: sample_data_sine.csv  sample_montage_1020_19.csv
include/qeeg/: adaptive_threshold.hpp  annotations.hpp  artifacts.hpp  bandpower.hpp  baseline.hpp  bdf_reader.hpp  bdf_writer.hpp  bids.hpp  biquad.hpp  bmp_writer.hpp  brainvision_reader.hpp  brainvision_writer.hpp  channel_map.hpp  channel_qc.hpp  channel_qc_io.hpp  cli_input.hpp  coherence.hpp  connectivity_graph.hpp  csv_io.hpp  csv_reader.hpp  debounce.hpp  edf_reader.hpp  edf_writer.hpp  event_ops.hpp  feedback_value.hpp  fft.hpp  hysteresis_gate.hpp  iaf.hpp  interpolate.hpp  line_noise.hpp  microstates.hpp  montage.hpp  nf_metric.hpp  nf_metric_eval.hpp  nf_protocols.hpp  nf_session.hpp  nf_threshold.hpp  online_artifacts.hpp  online_bandpower.hpp  online_coherence.hpp  (+30 more)
man/: qeeg_nf_cli.1  qeeg_offline_app_cli.1  qeeg_version_cli.1
schemas/: biotrace_extract_list.schema.json  biotrace_extract_manifest.schema.json  biotrace_run_nf_list.schema.json  biotrace_run_nf_run.schema.json  qeeg_loreta_connectivity_index.schema.json  qeeg_loreta_connectivity_protocol.schema.json  qeeg_loreta_metrics_index.schema.json  qeeg_loreta_protocol.schema.json  qeeg_nf_cli_list_bands.schema.json  qeeg_nf_cli_list_channels.schema.json  qeeg_nf_cli_list_metrics.schema.json  qeeg_nf_cli_list_protocols.schema.json  qeeg_nf_cli_nf_derived_events.schema.json  qeeg_nf_cli_nf_run_meta.schema.json  qeeg_nf_cli_nf_summary.schema.json  qeeg_nf_cli_print_config.schema.json  qeeg_nf_cli_version.schema.json  qeeg_nf_sessions_dashboard_index.schema.json  qeeg_region_summary_index.schema.json  qeeg_reports_dashboard_index.schema.json  qeeg_topomap_index.schema.json
scripts/: biotrace_extract_container.py  biotrace_run_nf.py  open_reports_bundle.py  package_reports_dashboard.py  render_artifacts_report.py  render_bandpowers_report.py  render_bandratios_report.py  render_bids_scan_report.py  render_channel_qc_report.py  render_connectivity_pair_report.py  render_connectivity_report.py  render_epoch_report.py  render_iaf_report.py  render_loreta_metrics_report.py  render_microstates_report.py  render_nf_feedback_report.py  render_nf_sessions_dashboard.py  render_pac_report.py  render_quality_report.py  render_reports_dashboard.py  render_spectral_features_report.py  render_spectrogram_report.py  render_topomap_report.py  render_trace_plot_report.py  report_common.py  rt_dashboard_simulate_output.py  rt_qeeg_dashboard.py  selftest_biotrace_extract.py  selftest_biotrace_run_nf.py  selftest_loreta_connectivity_index.py  selftest_loreta_metrics_index.py  selftest_nf_sessions_dashboard.py  selftest_region_summary_index.py  selftest_reports.py  selftest_rt_dashboard.py  selftest_topomap_index.py  validate_biotrace_json_outputs.py  validate_loreta_connectivity_index.py  validate_loreta_connectivity_protocol.py  validate_loreta_metrics_index.py  (+8 more)
scripts/ci/: requirements-ci.txt  run_ci.ps1  run_ci.sh
scripts/rt_dashboard_frontend/: app.js  app_legacy.js  index.html  kiosk.html  kiosk.js  style.css
scripts/tests/: test_report_common.py  test_validate_nf_sessions_dashboard_index.py  test_validate_reports_dashboard_index.py  test_validate_schema_files.py
src/: annotations.cpp  artifacts.cpp  artifacts_cli.cpp  bandpower.cpp  bandpower_cli.cpp  bandratios_cli.cpp  bdf_reader.cpp  bdf_writer.cpp  bids.cpp  bids_scan_cli.cpp  biquad.cpp  bmp_writer.cpp  brainvision_reader.cpp  brainvision_writer.cpp  bundle_cli.cpp  channel_map.cpp  channel_qc.cpp  channel_qc_cli.cpp  channel_qc_io.cpp  clean_cli.cpp  cli_input.cpp  coherence.cpp  coherence_cli.cpp  connectivity_graph.cpp  connectivity_map_cli.cpp  convert_cli.cpp  csv_io.cpp  csv_reader.cpp  edf_reader.cpp  edf_writer.cpp  epoch_cli.cpp  export_bdf_cli.cpp  export_bids_cli.cpp  export_brainvision_cli.cpp  export_derivatives_cli.cpp  export_edf_cli.cpp  fft.cpp  iaf.cpp  iaf_cli.cpp  info_cli.cpp  (+54 more)
tests/: test_adaptive_threshold.cpp  test_annotations.cpp  test_artifacts.cpp  test_band_spec_file.cpp  test_band_spec_iaf.cpp  test_baseline_norm.cpp  test_bdf_reader.cpp  test_bdf_writer.cpp  test_bids.cpp  test_biquad.cpp  test_brainvision_writer.cpp  test_channel_map.cpp  test_channel_qc.cpp  test_channel_qc_io.cpp  test_cli_input_nested_run_meta.cpp  test_cli_input_selectors.cpp  test_cli_tool_name.cpp  test_cmdline_split.cpp  test_coherence.cpp  test_connectivity_graph_metrics.cpp  test_csv_reader.cpp  test_csv_to_tsv.cpp  test_debounce.cpp  test_edf_reader.cpp  test_edf_writer.cpp  test_event_ops.cpp  test_events_table.cpp  test_feedback_value.cpp  test_fft.cpp  test_http_range.cpp  test_hysteresis_gate.cpp  test_iaf.cpp  test_imag_coherence.cpp  test_interpolate.cpp  test_iso8601.cpp  test_json_string_array.cpp  test_line_noise.cpp  test_microstate_segments.cpp  test_microstates.cpp  test_montage_aliases.cpp  (+47 more)
